lidarr-kim/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr-kim
spec:
  selector:
    matchLabels:
      app: lidarr-kim
      release: lidarr-kim
  template:
    metadata:
      labels:
        app: lidarr-kim
        release: lidarr-kim
    spec:
      volumes:
      - name: lidarr-kim-config  # < linkname of the volume for the pvc
        hostPath:
          path: /mnt/k3s/lidarr-kim-config # < pvc name we created in the previous yaml
      - name: lidarr-kim-songs
        hostPath:
          path: /mnt/kim-songs
      - name: lidarr-kim-downloads
        hostPath:
          path: /mnt/downloads
      containers:
      - image: linuxserver/lidarr:latest
        imagePullPolicy: Always
        name: lidarr
        ports:
        - containerPort: 8686
          name: http
          protocol: TCP
        volumeMounts:
        - mountPath: /config
          name: lidarr-kim-config
        - mountPath: /data/songs
          name: lidarr-kim-songs
        - mountPath: /data/downloads
          name: lidarr-kim-downloads
