lidarr-kim/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lidarr-kim-service    # < name of the service
  namespace: lidarr-kim # < namespace where place the deployment and pods
spec:
  selector:
    app: lidarr-kim # < reference to the deployment (connects with this deployment)
  ports:
    - name: webinterface
      protocol: TCP
      port: 8686
